# src/routes/clientes.routes.js
@@ -3,20 +3,22 @@
 const clientesController = require("../controllers/clientes.controller");
 
 module.exports = (app) => {
-  app.get("/clientes", (req, res) => {
-    // #swagger.tags = ['Clientes']
-    // #swagger.description = 'Endpoint para buscar un cliente, se puede usar o id o dni o cuit (y sus combinaciones aunque no sean necesarias).'
-    // #swagger.parameters['id'] = { description: 'ID de cliente.', type: 'string' }
-    // #swagger.parameters['cuit'] = { description: 'CUIT de cliente.', type: 'string' }
-    // #swagger.parameters['dni'] = { description: 'DNI de cliente.', type: 'string' }
-    clientesController.buscarCliente(req, res);
-  });
+  // app.post("/clientes", (req, res) => {
+  //   // #swagger.tags = ['Clientes']
+  //   // #swagger.description = 'Endpoint para buscar un cliente, se puede usar o id o dni o cuit (y sus combinaciones aunque no sean necesarias).'
+  //   // #swagger.parameters['id'] = { description: 'ID de cliente.', type: 'string' }
+  //   // #swagger.parameters['cuit'] = { description: 'CUIT de cliente.', type: 'string' }
+  //   // #swagger.parameters['dni'] = { description: 'DNI de cliente.', type: 'string' }
+  //   clientesController.buscarCliente(req, res);
+  // });
+
   app.post("/clientes", (req, res) => {
     // #swagger.tags = ['Clientes']
     // #swagger.description = 'Endpoint para crear un cliente.'
     // #swagger.parameters['id'] = { description: 'ID de cliente.' }
     clientesController.create(req, res);
   });
+  
   app.delete("/clientes", (req, res) => {
     // #swagger.tags = ['Clientes']
     // #swagger.description = 'Endpoint para eliminar un cliente.'
@@ -47,7 +49,7 @@ module.exports = (app) => {
   
   clientesController.modify(req, res));
 
-  app.get("/clientes/dni", (req, res) => {
+  app.post("/clientes/dni", (req, res) => {
     // #swagger.tags = ['Clientes']
     // #swagger.description = 'Endpoint para buscar un cliente por el DNI.'
     // #swagger.parameters['dni'] = { description: 'DNI de cliente.' }
@@ -55,7 +57,7 @@ module.exports = (app) => {
     clientesController.buscarClientePorDni(req, res);
   });
 
-  app.get("/clientes/cbu", (req, res) => {
+  app.post("/clientes/cbu", (req, res) => {
     // #swagger.tags = ['Clientes']
     // #swagger.description = 'Endpoint para buscar un cliente por el CBU.'
     // #swagger.parameters['cbu'] = { description: 'CBU de cliente.' }
